--- a/index.html
+++ b/index.html
@@ -55,32 +55,54 @@
 
                     <div class="table-responsive" id="divTablaMenu" style="display: none;">
 
-                        <div class="mb-2" id="divFiltrosMenu" style="margin-left: 4px;">
-                            <label>Filtros:</label>
+                        <div style="margin-left: 4px;">
+                            <div class="mb-3" id="divFiltrosMenu">
+                                <label>Filtros:</label>
 
-                            <div id="divSwitchesFiltros">
-                                <div class="form-check form-switch">
-                                    <label class="form-check-label" for="switchFiltroFavoritos">Favoritos</label>
-                                    <input class="form-check-input" type="checkbox" role="switch"
-                                        id="switchFiltroFavoritos" title="Marcar favoritos.">
+                                <div id="divSwitchesFiltros">
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="switchFiltroFavoritos">Favoritos</label>
+                                        <input class="form-check-input" type="checkbox" role="switch"
+                                            id="switchFiltroFavoritos" title="Marcar favoritos.">
 
+                                    </div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="switchFiltroSushi">Sushi</label>
+                                        <input class="form-check-input" type="checkbox" role="switch"
+                                            id="switchFiltroSushi" title="Marcar sushi.">
+
+                                    </div>
                                 </div>
-                                <div class="form-check form-switch">
-                                    <label class="form-check-label" for="switchFiltroSushi">Sushi</label>
-                                    <input class="form-check-input" type="checkbox" role="switch" id="switchFiltroSushi"
-                                        title="Marcar sushi.">
 
-                                </div>
                             </div>
 
+                            <div class="mb-3">
+                                <button class="btn btn-sm btn-outline-primary" id="añadirHabituales"
+                                    style="padding: 2px 6px;">Añadir pedidos habituales.</button>
+                            </div>
+
+                            <hr style="opacity: 1; color: #273585;">
                         </div>
 
                         <table class="table table-sm table-hover table-bordered mb-0 w-100" id="tablaMenu">
                         </table>
-                        <p class="mt-3" id="pInfoMenu"><b>*</b> Los platos que llevan ⭐ solo están disponibles por la
-                            noche, fines
-                            de
-                            semana y festivos.</p>
+
+                        <div id="footerMenu">
+                            <div>
+                                <p class="mt-3" id="pInfoMenu"><b>*</b> Los platos que llevan ⭐ solo están disponibles
+                                    por la
+                                    noche, fines
+                                    de
+                                    semana y festivos.</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary btn-sm btn-rounded" id="btnPrincipioMenu"
+                                    title="Pulsa para volver al principio del menú."><i
+                                        class="bi bi-arrow-up"></i></button>
+                            </div>
+
+                        </div>
+
                     </div>
                 </fieldset>
             </div>
@@ -92,8 +114,7 @@
 
                     <div id="divPedidos">
                         <p id="pInfoSeleccionPlatos" class="mb-0"><i>Selecciona platos del menú de arriba para comenzar
-                                con
-                                el pedido!</i></p>
+                                con el pedido!</i></p>
                         <ul class="list-group" id="listaPedidos"></ul>
                     </div>
 
@@ -102,12 +123,12 @@
                         <span id="totalPedidos"></span>
 
                         <div id="divComplementariaBtns">
-                            <button class="btn btn-primary btn-sm" id="btnCopiarPedidos" title="Copiar pedidos."><span
-                                    class="tooltip" title="Listado copiado al portapapeles!"></span><i
-                                    class="bi bi-files"></i></button>
+                            <button class="btn btn-primary btn-sm btn-rounded" id="btnCopiarPedidos"
+                                title="Copiar pedidos."><span class="tooltip"
+                                    title="Listado copiado al portapapeles!"></span><i class="bi bi-files"></i></button>
 
-                            <button class="btn btn-danger btn-sm" id="btnBorrarListaPedidos" title="Borrar todo."><i
-                                    class="bi bi-trash"></i></button>
+                            <button class="btn btn-danger btn-sm btn-rounded" id="btnBorrarListaPedidos"
+                                title="Borrar todo."><i class="bi bi-trash"></i></button>
                         </div>
                     </div>
 
@@ -174,7 +195,7 @@
                             <ul>
                                 <li><u>Por cada bebida</u>: <b>3,50 &euro;</b>&nbsp;&nbsp;
                                     <span id="spanInfoBebida">¡No abusar!</span>
-                                    </li>
+                                </li>
                             </ul>
                         </div>
                         <!-- FIN CUERPO PRECIOS -->
@@ -242,6 +263,28 @@
         title="Pulsa para volver arriba.">
         <i class="bi bi-arrow-up-short"></i>
     </button>
+
+    <!-- MODAL PEDIDOS-->
+    <div class="modal" id="modalPedido">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">LISTADO PEDIDOS 🕵️</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+
+                </div>
+                <div class="modal-body">
+                    <div id="listadoPedidosModal"></div>
+                </div>
+                <div class="modal-footer" style="justify-content: space-between;">
+                    <span id="totalPlatosModal"></span>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div></div>
 
@@ -317,10 +360,10 @@
         ["A69", "Pollo laqueado"],
         ["A70", "Gambas laqueado ⭐"],
         ["A74", "Empanadilla con carne"],
-        ["A76", "Maki atún picante"],
+        ["A76", "Maki atún picante 🥇"],
         ["A78", "Sushi salmón y aguacate"],
         ["A79", "Maki de pollo desmenuzado ⭐"],
-        ["A80", "Sushi atún 🥇"],
+        ["A80", "Sushi atún"],
         ["A81", "Sushi variados"],
         ["A82", "Maki salmón y aguacate"],
         ["A83", "Maki palito de cangrejo, pepino y aguacate"],
@@ -487,7 +530,7 @@
 
     //LISTENER PARA REMARCAR LOS PLATOS FAVORITOS.
     $("#switchFiltroFavoritos").on("change", function () {
-        const platosFavoritos = ["A15", "A20", "A43", "A53", "A57", "A61", "A67", "A76", "A80", "A81"];
+        const platosFavoritos = ["A15", "A20", "A22", "A43", "A53", "A57", "A61", "A67", "A76", "A80", "A81"];
 
         $("#switchFiltroSushi").prop("checked", false);
         $("td").closest("tr").removeClass("sushi");
@@ -600,9 +643,34 @@
         $("#pInfoSeleccionPlatos").show();
     });
 
+    //LISTENER PARA AÑADIR AL LISTADO LOS PLATOS HABITUALES.
+    $("#añadirHabituales").click(function () {
+        const platosFavoritos = ["A15", "A20", "A22", "A43", "A53", "A57", "A61", "A67", "A76", "A80", "A81"];
+        var pedidoHabitual = "";
+
+        $("#pInfoSeleccionPlatos").hide();
+
+        for (let i = 0; i < platosFavoritos.length; i++) {
+            if (!$('#listaPedidos').text().includes(platosFavoritos[i])) {
+                pedidoHabitual += "<li class='list-group-item' ><span><b>" + platosFavoritos[i] + "</b> - " + mapMenu.get(platosFavoritos[i]) + "</span><div><button class='btn btn-sm bg-transparent align-self-end my-auto btnImagenPlato' title='Buscar plato.'><i class='bi bi-image'></i></button><button class='btn bg-transparent btnEliminarPedido' title='Eliminar pedido.'><i class='bi bi-x-lg'></i></button></div></li>";
+            }
+        }
+
+        document.getElementById("listaPedidos").innerHTML += pedidoHabitual;
+        document.getElementById("totalPedidos").innerHTML = "Platos seleccionados: <b>" + $("#listaPedidos li").length + "</b>";
+
+        $("#divComplementariaPedidos").show();
+
+        // Desplazar la vista hasta el div.
+        var posicionDiv = $("#divListaPedidos").offset().top - 10;
+        $("html, body").animate({ scrollTop: posicionDiv }, 0);
+
+
+    });
+
     //FUNCION PARA EL EASTER EGG.
     $("body").on("click", "#spanEE", function () {
-        const frasesEE = ["¿Cavani te apetece japones o japonesa?", "Cavani la tiene chicken little.", "Cavani la tiene como un nigiri.", "Hassy."];
+        const frasesEE = ["¿Cavani te apetece japones o japonesa?", "Cavani la tiene chicken little.", "Cavani la tiene como un nigiri.", "Hassy.", "No cualquier harina hace hot cakes."];
         let numeroAleatorio = Math.floor(Math.random() * frasesEE.length);
 
         const ahora = new Date().getTime();
@@ -618,6 +686,28 @@
             contadorClicks = 1;
         }
         ultimoTiempoClick = ahora;
+    });
+
+
+    $("#totalPedidos").click(function () {
+
+        let listadoPedidos = "";
+        const elementosLista = $("#listaPedidos li");
+
+        elementosLista.each(function (index) {
+            const textoSpan = $(this).find("span").text().replace(/[^A-Za-z0-9áéíóúÁÉÍÓÚ.,-:"'\(\)\s]/g, '');
+            listadoPedidos += "<p class='pListadoPedidosModal'>" + textoSpan + "</p>";
+        });
+
+        $("#listadoPedidosModal").html(listadoPedidos);
+        $("#totalPlatosModal").html("Total de platos pedidos: <b>" + $("#listaPedidos li").length + "</b>");
+
+        $("#modalPedido").modal("show");
+    });
+
+
+    $("#btnPrincipioMenu").click(function () {
+        $("#divTablaMenu").scrollTop(0);
     });
 
     //ESTAS 3 FUNCIONES SON PARA EL FUNCIONAMIENTO DEL BOTON GO-UP.
