--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <fieldset class="mb-5 border rounded-3 p-3" id="fieldsetMenu">
 
             <!-- MENU -->
-            <div id="divMenu">
-                <fieldset class="mb-3 border rounded-3 p-3">
+            <div id="divMenu" style="position: relative;">
+                <fieldset class="mb-3 border rounded-3 p-3" style="box-shadow: -1px 6px 6px -5px rgba(0, 0, 0, 0.3);">
                     <legend class="w-auto px-2 float-none">MENÚ</legend>
 
                     <div class="table-responsive" id="divTablaMenu" style="display: none;">
@@ -78,7 +78,7 @@
 
                             <div class="mb-3">
                                 <button class="btn btn-sm btn-outline-primary" id="añadirHabituales"
-                                    style="padding: 2px 6px;">Añadir pedidos habituales.</button>
+                                    style="padding: 2px 6px;">Añadir pedidos habituales</button>
                             </div>
 
                             <hr style="opacity: 1; color: #273585;">
@@ -95,16 +95,16 @@
                                     de
                                     semana y festivos.</p>
                             </div>
-                            <div>
-                                <button class="btn btn-primary btn-sm btn-rounded" id="btnPrincipioMenu"
-                                    title="Pulsa para volver al principio del menú."><i
-                                        class="bi bi-arrow-up"></i></button>
-                            </div>
 
                         </div>
 
                     </div>
+
                 </fieldset>
+
+                <button class="btn btn-primary btn-sm btn-rounded" id="btnPrincipioMenu"
+                    title="Pulsa para volver al principio del menú."><i class="bi bi-arrow-up"></i></button>
+
             </div>
 
             <!-- LISTADO PEDIDOS -->
@@ -120,7 +120,7 @@
 
                     <div class="mt-3" id="divComplementariaPedidos" style="display: none;">
 
-                        <span id="totalPedidos"></span>
+                        <span id="totalPedidos"><i class="bi bi-box-arrow-up-right" title="Ver pedido en modo discreto." style="color:  #0d6efd;"></i>&nbsp;&nbsp;<span id="textoTotalPedidos"></span></span>
 
                         <div id="divComplementariaBtns">
                             <button class="btn btn-primary btn-sm btn-rounded" id="btnCopiarPedidos"
@@ -577,7 +577,7 @@
 
         if (!$('#listaPedidos').text().includes(columna1)) {
             document.getElementById("listaPedidos").innerHTML += pedido;
-            document.getElementById("totalPedidos").innerHTML = "Platos seleccionados: <b>" + $("#listaPedidos li").length + "</b>";
+            document.getElementById("textoTotalPedidos").innerHTML = "Platos seleccionados: <b>" + $("#listaPedidos li").length + "</b>";
         }
 
         $("#divComplementariaPedidos").show();
@@ -595,9 +595,10 @@
             var spanContent = spanElement.text().replace(/[^A-Za-z0-9áéíóúÁÉÍÓÚ.,-:"'\(\)\s]/g, '');
 
             plato = spanContent.replace(spanElement.find('b').text() + ' - ', '');
+            
         }
 
-        var url = "https://www.google.com/search?q=" + plato + "&tbm=isch";
+        var url = "https://www.google.com/search?q=" + plato.toLowerCase() + "&tbm=isch";
 
         window.open(url, "_blank");
     });
@@ -606,7 +607,7 @@
     $("#listaPedidos").on("click", ".btnEliminarPedido", function () {
         var index = $(this).closest("li").index();
         $("#listaPedidos li").eq(index).remove();
-        document.getElementById("totalPedidos").innerHTML = "Total de platos seleccionados: <b>" + $("#listaPedidos li").length + "</b>";
+        document.getElementById("textoTotalPedidos").innerHTML = "Total de platos seleccionados: <b>" + $("#listaPedidos li").length + "</b>";
 
         if ($("#listaPedidos li").length == 0) {
             $("#divComplementariaPedidos").hide();
@@ -657,7 +658,7 @@
         }
 
         document.getElementById("listaPedidos").innerHTML += pedidoHabitual;
-        document.getElementById("totalPedidos").innerHTML = "Platos seleccionados: <b>" + $("#listaPedidos li").length + "</b>";
+        document.getElementById("textoTotalPedidos").innerHTML = "Platos seleccionados: <b>" + $("#listaPedidos li").length + "</b>";
 
         $("#divComplementariaPedidos").show();
 
@@ -670,12 +671,12 @@
 
     //FUNCION PARA EL EASTER EGG.
     $("body").on("click", "#spanEE", function () {
-        const frasesEE = ["¿Cavani te apetece japones o japonesa?", "Cavani la tiene chicken little.", "Cavani la tiene como un nigiri.", "Hassy.", "No cualquier harina hace hot cakes."];
+        const frasesEE = ["¿Cavani te apetece japones o japonesa?", "Cavani la tiene chicken little.", "Cavani la tiene como un nigiri.", "Hassy.", "No cualquier harina hace hot cakes 🥞."];
         let numeroAleatorio = Math.floor(Math.random() * frasesEE.length);
 
         const ahora = new Date().getTime();
 
-        if (ahora - ultimoTiempoClick < 2500) {
+        if (ahora - ultimoTiempoClick < 3000) {
             contadorClicks++;
             if (contadorClicks >= 5) {
                 alert(frasesEE[numeroAleatorio]);
@@ -707,7 +708,7 @@
 
 
     $("#btnPrincipioMenu").click(function () {
-        $("#divTablaMenu").scrollTop(0);
+        $("#divTablaMenu").animate({ scrollTop: 0 }, 300, "swing");
     });
 
     //ESTAS 3 FUNCIONES SON PARA EL FUNCIONAMIENTO DEL BOTON GO-UP.
