añadidas rutas relativas

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
     <div id="div-loading">
-        <img id="img-loading" src="images/loading_gif.svg" />
+        <img id="img-loading" src=".images/loading_gif.svg" />
     </div>
 
     <header>
@@ -265,7 +265,7 @@
                     <div class="accordion-body">
                         <div class="text-center" id="divPodio">
                             <!-- INICIO CUERPO PODIO -->
-                            <img src="/images/podio.png" class="img-fluid" alt="Imágen podio.">
+                            <img src="./images/podio.png" class="img-fluid" alt="Imágen podio.">
                             <!-- FIN CUERPO PODIO -->
                         </div>
 
@@ -292,7 +292,7 @@
                             </p>
 
                             <div id="divImgMaki">
-                                <img src="/images/maki_atun.png" id="imgMaki" alt="Imágen maki." draggable="false">
+                                <img src="./images/maki_atun.png" id="imgMaki" alt="Imágen maki." draggable="false">
 
 
                             </div>
