--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Carta buffet libre Nakoya">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/x-icon" href=".images/favicon.ico">
-    <link href=".css/main.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- Bootstrap. -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
