--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
     <div id="div-loading">
-        <img id="img-loading" src=".images/loading_gif.svg" />
+        <img id="img-loading" src="images/loading_gif.svg" />
     </div>
 
     <header>
